--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "copyfiles" : "^1.2.0",
         "prop-types" : "^15.5.9",
         "react" : "^15.5.4",
-        "react-dom" : "^15.5.4",
+        "react-dom" : "^15.5.4"
     },
     "devDependencies" : {
         "react-test-renderer" : "^15.5.4"
-    },
+    }
 }
