--- a/package.json
+++ b/package.json
@@ -7,16 +7,32 @@
         "url" : "https://github.com/GibbsConsulting/dpd-components.git",
         "type" : "git"
     },
-    "license" : "GNU AGPL v3.0",
+    "license" : "AGPL-3.0",
     "issues" : "https://github.com/GibbsConsutling/dpd-components/issues",
     "homepage" : "https://github.com/GibbsConsutling/dpd-components",
+    "scripts": {
+        "copy-lib": "copyfiles -u 1 lib/* dpd_components",
+        "demo": "builder run demo",
+        "install-local": "npm run copy-lib && python setup.py install",
+        "prepublish": "npm test && builder run build-dist && npm run copy-lib",
+        "publish-all": "npm publish && python setup.py sdist upload",
+        "publish-pypi": "npm run prepublish && python setup.py sdist upload",
+        "start": "builder run build-dev",
+        "test": "builder run check",
+        "test-watch": "builder run test-frontend-watch",
+        "test-debug": "builder run test-frontend-debug",
+        "uninstall-local": "pip uninstall dpd-components -y"
+    },
     "dependencies" : {
+        "builder": "3.2.2",
+        "dash-components-archetype": "^0.2.11",
         "copyfiles" : "^1.2.0",
         "prop-types" : "^15.5.9",
         "react" : "^15.5.4",
         "react-dom" : "^15.5.4"
     },
     "devDependencies" : {
+        "dash-components-archetype-dev": "^0.2.11",
         "react-test-renderer" : "^15.5.4"
     }
 }
